--- a/energyDataApp/Views/Shared/_Layout.cshtml
+++ b/energyDataApp/Views/Shared/_Layout.cshtml
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - energyDataApp</title>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>energyDataApp</title>
+    <link href="@Url.Content("~/css/site.css")" rel="stylesheet" type="text/css" />
 
-    </head>
+</head>
 
     <body>
 
@@ -16,14 +17,12 @@
 
            @RenderBody()
 
-
         </div>
 
 
 
         <environment include="Development">
             <script src="~/lib/jquery/dist/jquery.js"></script>
-            <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>
         </environment>
         <environment exclude="Development">
