--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -54,5 +54,56 @@
         </div>
 
         <input type="submit" value="Update List" />
-    </form>
+
+        <div id="EnergyReadings">
+
+            <ul>
+
+                <li>
+
+                    <div id="BasicInfo">
+
+                        <div id="row1">
+                            <p>Node</p>
+                            <p>0096WD_7_N001</p>
+                            <p>State</p>
+                            <p>UT</p>
+                            <p>ISO</p>
+                            <p>CAISO</p>
+                        </div>
+
+                        <div id="row2">
+                            <p>Node Type</p>
+                            <p>NODE</p>
+                            <p>County</p>
+                            <p>Salt Lake</p>
+                            <p>Price Type</p>
+                            <p>Real Time</p>
+                        </div>
+                    </div>
+
+                    <div id="NumericalInfo">
+
+                        <div id="row1">
+                            <p>Avg Price</p>
+                            <p>35.575122</p>
+                            <p>Max Pric</p>
+                            <p>21530.15522</p>
+                            <p>Min Price</p>
+                            <p>-31.223837</p>
+                        </div>
+
+                        <div id="row2">
+                            <p>Avg Congestion</p>
+                            <p>-1.648036</p>
+                            <p>Max congestion</p>
+                            <p>311.54138</p>
+                            <p>Min Congestion</p>
+                            <p>-295.783445</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+     </form>
 </div>
