--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -1,14 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
+﻿
 <div id="Index">
 
-    <form method="post">
+    <form method="post" asp-controller="Home" asp-action="Create">
 
         <div id="FilterContainor">
 
-            <select>
+            <select name="FilterCol">
                 <option value="">Select a Column</option>
 
                 <option value="avgprice">Avg Price</option>
@@ -19,15 +16,15 @@
                 <option value="mincongestion">Min Congestion</option>
             </select>
 
-            <input type="number" placeholder="min" />
+            <input name="MaxNum" type="number" placeholder="max" />
 
-            <input type="number" placeholder="max" />
+            <input name="MinNum" type="number" placeholder="min" />
 
         </div>
 
         <div id="SortContainor">
 
-            <select >
+            <select name="SortCol">
                 <option value="">Select a Column</option>
 
                 <option value="node">Node</option>
@@ -44,7 +41,7 @@
                 <option value="mincongestion">Min Congestion</option>
             </select>
 
-            <select>
+            <select name="SortMethod">
                 <option value="">Select Sorting Pattern</option>
 
                 <option value="abc">ABC / 123</option>
