the csvHelper seems to be parseing the data but the energydata model can only hold one line of it... I will be getting it to hold all the data now

--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                 <option value="node">Node</option>
                 <option value="iso">ISO</option>
                 <option value="nodetype">Node Type</option>
-                <option value="pricetype">Price Type</option>
+                <option value="pricingtype">Pricing Type</option>
                 <option value="state">State</option>
                 <option value="county">County</option>
                 <option value="avgprice">Avg Price</option>
@@ -75,7 +75,7 @@
                             <p>NODE</p>
                             <p>County</p>
                             <p>Salt Lake</p>
-                            <p>Price Type</p>
+                            <p>Pricing Type</p>
                             <p>Real Time</p>
                         </div>
                     </div>
