--- a/energyDataApp/wwwroot/css/site.css
+++ b/energyDataApp/wwwroot/css/site.css
@@ -11,9 +11,6 @@ greyblue, lightblue, blue, white, black*/
     list-style: none
 }
 
-#Index {
-}
-
 #FilterContainor, #SortContainor {
     width: 35%;
     background: #50A4A7;
@@ -60,6 +57,7 @@ input[type=submit] {
     width: 95%;
     background: #177275;
     border-radius: 10px;
+    margin-bottom: 5%;
 }
 
 
