--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -1,15 +1,11 @@
-﻿@model energyDataApp.Models.SearchParms
-@using System.IO;
-@using CsvHelper;
-@using energyDataApp.Models;
-
+﻿
 <div id="Index">
 
     <form method="post" asp-controller="Home" asp-action="Create">
 
         <div id="FilterContainor">
 
-            <select asp-for="FilterCol">
+            <select name="FilterCol">
                 <option value="">Select a Column</option>
 
                 <option value="avgprice">Avg Price</option>
@@ -20,15 +16,15 @@
                 <option value="mincongestion">Min Congestion</option>
             </select>
 
-            <input asp-for="MaxNum" type="number" placeholder="max" />
+            <input name="MaxNum" type="number" placeholder="max" />
 
-            <input asp-for="MinNum" type="number" placeholder="min" />
+            <input name="MinNum" type="number" placeholder="min" />
 
         </div>
 
         <div id="SortContainor">
 
-            <select asp-for="SortCol">
+            <select name="SortCol">
                 <option value="">Select a Column</option>
 
                 <option value="node">Node</option>
@@ -45,7 +41,7 @@
                 <option value="mincongestion">Min Congestion</option>
             </select>
 
-            <select asp-for="SortMethod">
+            <select name="SortMethod">
                 <option value="">Select Sorting Pattern</option>
 
                 <option value="abc">ABC / 123</option>
@@ -60,61 +56,51 @@
 
             <ul>
 
-                @{
-                    TextReader reader = new StreamReader("DataTable.csv");
-                    var csv = new CsvReader(reader);
-                    csv.Read();
-                    csv.ReadHeader();
-                    @*List<> aList = new List<T>;*@
-                    while (csv.Read())
-                    {
-                        var record = csv.GetRecord<EnergyData>();
+                @foreach(var record in Model.AllEnergyData) {
+                <li>
 
-                        <li>
+                    <div id="BasicInfo">
 
-                            <div id="BasicInfo">
+                        <div id="row1">
+                            <p>Node</p>
+                            <p>@record.NODE</p>
+                            <p>State</p>
+                            <p>@record.State</p>
+                            <p>@record.ISO</p>
+                            <p>ISO</p>
+                        </div>
 
-                                <div id="row1">
-                                    <p>Node</p>
-                                    <p>@record.NODE</p>
-                                    <p>State</p>
-                                    <p>@record.State</p>
-                                    <p>@record.ISO</p>
-                                    <p>ISO</p>
-                                </div>
+                        <div id="row2">
+                            <p>Node Type</p>
+                            <p>@record.NodeType</p>
+                            <p>County</p>
+                            <p>@record.County</p>
+                            <p>Pricing Type</p>
+                            <p>@record.PricingType</p>
+                        </div>
+                    </div>
 
-                                <div id="row2">
-                                    <p>Node Type</p>
-                                    <p>@record.NodeType</p>
-                                    <p>County</p>
-                                    <p>@record.County</p>
-                                    <p>Pricing Type</p>
-                                    <p>@record.PricingType</p>
-                                </div>
-                            </div>
+                    <div id="NumericalInfo">
 
-                            <div id="NumericalInfo">
+                        <div id="row1">
+                            <p>Avg Price</p>
+                            <p>@record.AvgPrice</p>
+                            <p>Max Pric</p>
+                            <p>@record.MaxPrice</p>
+                            <p>Min Price</p>
+                            <p>@record.MinPrice</p>
+                        </div>
 
-                                <div id="row1">
-                                    <p>Avg Price</p>
-                                    <p>@record.AvgPrice</p>
-                                    <p>Max Pric</p>
-                                    <p>@record.MaxPrice</p>
-                                    <p>Min Price</p>
-                                    <p>@record.MinPrice</p>
-                                </div>
-
-                                <div id="row2">
-                                    <p>Avg Congestion</p>
-                                    <p>@record.AvgCongestion</p>
-                                    <p>Max congestion</p>
-                                    <p>@record.MaxCongestion</p>
-                                    <p>Min Congestion</p>
-                                    <p>@record.MinCongestion</p>
-                                </div>
-                            </div>
-                        </li>
-                    }
+                        <div id="row2">
+                            <p>Avg Congestion</p>
+                            <p>@record.AvgCongestion</p>
+                            <p>Max congestion</p>
+                            <p>@record.MaxCongestion</p>
+                            <p>Min Congestion</p>
+                            <p>@record.MinCongestion</p>
+                        </div>
+                    </div>
+                </li>
                 }
            </ul>
         </div>
