--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -8,12 +8,12 @@
             <select name="FilterCol">
                 <option value="">Select a Column</option>
 
-                <option value="avgprice">Avg Price</option>
-                <option value="maxprice">Max Price</option>
-                <option value="minprice">Min Price</option>
-                <option value="avgcongestion">Avg Congestion</option>
-                <option value="maxcongestion">Max Congestion</option>
-                <option value="mincongestion">Min Congestion</option>
+                <option value="AvgPrice">Avg Price</option>
+                <option value="MaxPrice">Max Price</option>
+                <option value="MinPrice">Min Price</option>
+                <option value="AvgCongestion">Avg Congestion</option>
+                <option value="MaxCongestion">Max Congestion</option>
+                <option value="MinCongestion">Min Congestion</option>
             </select>
 
             <input name="MaxNum" type="number" placeholder="max" />
@@ -27,18 +27,18 @@
             <select name="SortCol">
                 <option value="">Select a Column</option>
 
-                <option value="node">Node</option>
-                <option value="iso">ISO</option>
-                <option value="nodetype">Node Type</option>
-                <option value="pricingtype">Pricing Type</option>
-                <option value="state">State</option>
-                <option value="county">County</option>
-                <option value="avgprice">Avg Price</option>
-                <option value="maxprice">Max Price</option>
-                <option value="minprice">Min Price</option>
-                <option value="avgcongestion">Avg Congestion</option>
-                <option value="maxcongestion">Max Congestion</option>
-                <option value="mincongestion">Min Congestion</option>
+                <option value="NODE">Node</option>
+                <option value="ISO">ISO</option>
+                <option value="NodeType">Node Type</option>
+                <option value="PricingType">Pricing Type</option>
+                <option value="State">State</option>
+                <option value="County">County</option>
+                <option value="AvgPrice">Avg Price</option>
+                <option value="MaxPrice">Max Price</option>
+                <option value="MinPrice">Min Price</option>
+                <option value="AvgCongestion">Avg Congestion</option>
+                <option value="MaxCongestion">Max Congestion</option>
+                <option value="MinCongestion">Min Congestion</option>
             </select>
 
             <select name="SortMethod">
@@ -52,57 +52,59 @@
 
         <input type="submit" value="Update List" />
 
-        <div id="EnergyReadings">
-
-            <ul>
-
-                @foreach(var record in Model.AllEnergyData) {
-                <li>
-
-                    <div id="BasicInfo">
-
-                        <div id="row1">
-                            <p>Node</p>
-                            <p>@record.NODE</p>
-                            <p>State</p>
-                            <p>@record.State</p>
-                            <p>@record.ISO</p>
-                            <p>ISO</p>
-                        </div>
-
-                        <div id="row2">
-                            <p>Node Type</p>
-                            <p>@record.NodeType</p>
-                            <p>County</p>
-                            <p>@record.County</p>
-                            <p>Pricing Type</p>
-                            <p>@record.PricingType</p>
-                        </div>
-                    </div>
-
-                    <div id="NumericalInfo">
-
-                        <div id="row1">
-                            <p>Avg Price</p>
-                            <p>@record.AvgPrice</p>
-                            <p>Max Pric</p>
-                            <p>@record.MaxPrice</p>
-                            <p>Min Price</p>
-                            <p>@record.MinPrice</p>
-                        </div>
-
-                        <div id="row2">
-                            <p>Avg Congestion</p>
-                            <p>@record.AvgCongestion</p>
-                            <p>Max congestion</p>
-                            <p>@record.MaxCongestion</p>
-                            <p>Min Congestion</p>
-                            <p>@record.MinCongestion</p>
-                        </div>
-                    </div>
-                </li>
-                }
-           </ul>
-        </div>
     </form>
+
+    <div id="EnergyReadings">
+
+        <ul>
+
+            @*@foreach(var record in Model.AllEnergyData) {
+
+            <li>
+
+                <div id="BasicInfo">
+
+                    <div id="row1">
+                        <p>Node</p>
+                        <p>@record.NODE</p>
+                        <p>State</p>
+                        <p>@record.State</p>
+                        <p>@record.ISO</p>
+                        <p>ISO</p>
+                    </div>
+
+                    <div id="row2">
+                        <p>Node Type</p>
+                        <p>@record.NodeType</p>
+                        <p>County</p>
+                        <p>@record.County</p>
+                        <p>Pricing Type</p>
+                        <p>@record.PricingType</p>
+                    </div>
+                </div>
+
+                <div id="NumericalInfo">
+
+                    <div id="row1">
+                        <p>Avg Price</p>
+                        <p>@record.AvgPrice</p>
+                        <p>Max Pric</p>
+                        <p>@record.MaxPrice</p>
+                        <p>Min Price</p>
+                        <p>@record.MinPrice</p>
+                    </div>
+
+                    <div id="row2">
+                        <p>Avg Congestion</p>
+                        <p>@record.AvgCongestion</p>
+                        <p>Max congestion</p>
+                        <p>@record.MaxCongestion</p>
+                        <p>Min Congestion</p>
+                        <p>@record.MinCongestion</p>
+                    </div>
+                </div>
+            </li>
+            }*@
+       </ul>
+    </div>
 </div>
