--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿
-<div id="Index">
-
-    <form method="post" asp-controller="Home" asp-action="Create">
+<div name="Index">
 
         <div id="FilterContainor">
 
@@ -44,20 +42,17 @@
             <select name="SortMethod">
                 <option value="">Select Sorting Pattern</option>
 
-                <option value="abc">ABC / 123</option>
-                <option value="cba">CBA / 321</option>
+                <option value="asc">ABC / 123</option>
+                <option value="desc">CBA / 321</option>
             </select>
 
         </div>
 
-        <input type="submit" value="Update List" />
-
-    </form>
+        <input id="UpdateList" type="submit" value="Update List" />
 
     <div id="EnergyReadings">
+	    <ul>
 
-        <ul>
-
-       </ul>
+	    </ul>
     </div>
 </div>
