I am now grabbing values from my dropdowns

--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
         <div id="SortContainor">
 
             <select name="SortCol">
-                <option value="">Select a Column</option>
+                <option value="" selected>Select a Column</option>
 
                 <option value="NODE">Node</option>
                 <option value="ISO">ISO</option>
