--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -14,9 +14,9 @@
                 <option value="MinCongestion">Min Congestion</option>
             </select>
 
-            <input name="MaxNum" type="number" placeholder="max" />
+            <input name="maxNum" type="number" placeholder="max" />
 
-            <input name="MinNum" type="number" placeholder="min" />
+            <input name="minNum" type="number" placeholder="min" />
 
         </div>
 
@@ -25,8 +25,8 @@
             <select name="SortCol">
                 <option value="" selected>Select a Column</option>
 
-                <option value="NODE">Node</option>
-                <option value="ISO">ISO</option>
+                <option value="Node">Node</option>
+                <option value="Iso">ISO</option>
                 <option value="NodeType">Node Type</option>
                 <option value="PricingType">Pricing Type</option>
                 <option value="State">State</option>
