made some progress in my filtering of the data

--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -14,9 +14,9 @@
                 <option value="MinCongestion">Min Congestion</option>
             </select>
 
-            <input name="maxNum" type="number" placeholder="max" />
+            <input name="MaxNum" type="number" placeholder="max" />
 
-            <input name="minNum" type="number" placeholder="min" />
+            <input name="MinNum" type="number" placeholder="min" />
 
         </div>
 
