I have set up error pop us for when both min and max are not in and when there paraments bring back no data

--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
 
             <input name="MinNum" type="number" placeholder="min" />
 
+						<p class = "ErrorMsg" id = "FilterError">more info needed</p>
         </div>
 
         <div id="SortContainor">
@@ -45,12 +46,14 @@
                 <option value="asc">ABC / 123</option>
                 <option value="desc">CBA / 321</option>
             </select>
-
         </div>
 
         <input id="UpdateList" type="submit" value="Update List" />
 
     <div id="EnergyReadings">
+
+			<p class = "ErrorMsg" id = "NoDataError">No data was found</p>
+
 	    <ul>
 
 	    </ul>
