I set it up so that 10 list items spawn at a time so it loads faster.

--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
             <input name="MinNum" type="number" placeholder="min" />
 
 						<p class = "ErrorMsg" id = "FilterError">more info needed</p>
+						<p class = "ErrorMsg" id = "DifferenceError">min is larger than max</p>
         </div>
 
         <div id="SortContainor">
