--- a/energyDataApp/wwwroot/css/site.css
+++ b/energyDataApp/wwwroot/css/site.css
@@ -44,6 +44,9 @@ input[type=submit] {
     margin-bottom: 5%;
 }
 
+#EnergyReadings {
+    border:solid red;
+}
 #EnergyReadings p{
     font-size: 18px;
 }
