sort error message added and working

--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -47,6 +47,8 @@
                 <option value="asc">ABC / 123</option>
                 <option value="desc">CBA / 321</option>
             </select>
+
+						<p class = "ErrorMsg" id = "SortError">more info needed</p>
         </div>
 
         <input id="UpdateList" type="submit" value="Update List" />
