--- a/energyDataApp/wwwroot/css/site.css
+++ b/energyDataApp/wwwroot/css/site.css
@@ -109,7 +109,7 @@ input[type=submit]:focus {
 #NoDataError {
 	margin: 3% 40% !important;
 	font-size: 30px !important;
-	background: #E9EEF2 !important;
+	background: #212020 !important;
 
 }
 
