I found out why my filter and sort get request stopped working.. the wording changed in the db a bit

--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -6,12 +6,12 @@
             <select class = "Params" name="FilterCol">
                 <option value="">Select a Column</option>
 
-                <option value="AvgPrice">Avg Price</option>
-                <option value="MaxPrice">Max Price</option>
-                <option value="MinPrice">Min Price</option>
-                <option value="AvgCongestion">Avg Congestion</option>
-                <option value="MaxCongestion">Max Congestion</option>
-                <option value="MinCongestion">Min Congestion</option>
+                <option value="Avgprice">Avg Price</option>
+                <option value="Maxprice">Max Price</option>
+                <option value="Minprice">Min Price</option>
+                <option value="Avgcongestion">Avg Congestion</option>
+                <option value="Maxcongestion">Max Congestion</option>
+                <option value="Mincongestion">Min Congestion</option>
             </select>
 
             <input class = "Params" name="MaxNum" type="number" placeholder="max" />
@@ -29,19 +29,20 @@
 
                 <option value="Node">Node</option>
                 <option value="Iso">ISO</option>
-                <option value="NodeType">Node Type</option>
-                <option value="PricingType">Pricing Type</option>
+                <option value="Nodetype">Node Type</option>
+                <option value="Pricingtype">Pricing Type</option>
                 <option value="State">State</option>
                 <option value="County">County</option>
-                <option value="AvgPrice">Avg Price</option>
-                <option value="MaxPrice">Max Price</option>
-                <option value="MinPrice">Min Price</option>
-                <option value="AvgCongestion">Avg Congestion</option>
-                <option value="MaxCongestion">Max Congestion</option>
-                <option value="MinCongestion">Min Congestion</option>
+                <option value="Avgprice">Avg Price</option>
+                <option value="Maxprice">Max Price</option>
+                <option value="Minprice">Min Price</option>
+                <option value="Avgcongestion">Avg Congestion</option>
+                <option value="Maxcongestion">Max Congestion</option>
+                <option value="Mincongestion">Min Congestion</option>
             </select>
 
-            <select class = "Params" name="SortMethod">
+            <select class = "Params"
+						 name="SortMethod">
                 <option value="">Select Sorting Pattern</option>
 
                 <option value="asc">ABC / 123</option>
