--- a/energyDataApp/Views/Shared/_Layout.cshtml
+++ b/energyDataApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link href="@Url.Content("~/css/site.css")" rel="stylesheet" type="text/css" />
 
     <script src="~/js/site.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
 
 
 </head>
