--- a/energyDataApp/Views/Shared/_Layout.cshtml
+++ b/energyDataApp/Views/Shared/_Layout.cshtml
@@ -6,9 +6,8 @@
     <title>energyDataApp</title>
     <link href="@Url.Content("~/css/site.css")" rel="stylesheet" type="text/css" />
 
-    <script src="~/js/site.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
-
+    <script src="~/js/site.js" asp-append-version="true"></script>
 
 </head>
 
