making css look better

--- a/energyDataApp/Views/Home/Index.cshtml
+++ b/energyDataApp/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 <div name="Index">
 
+			<div id = "ParamsContainor">
         <div id="FilterContainor">
 
             <select class = "Params" name="FilterCol">
@@ -51,6 +52,7 @@
 
 						<p class = "ErrorMsg" id = "SortError">more info needed</p>
         </div>
+			</div>
 
         <input id="UpdateList" type="submit" value="Welcome!" />
 
