--- a/energyDataApp/wwwroot/css/site.css
+++ b/energyDataApp/wwwroot/css/site.css
@@ -14,27 +14,57 @@ for details on configuring this project to bundle and minify static web assets. 
 		letter-spacing: .8px;
 }
 
+#ParamsContainor {
+	width: 90%;
+	margin: 5% 5%;
+  border:solid 1.5px #496E7D;
+  border-radius: 25px;
+	-webkit-box-shadow: inset 1px -3px 93px 17px rgba(33,32,32,1);
+	-moz-box-shadow: inset 1px -3px 93px 17px rgba(33,32,32,1);
+	box-shadow: inset 1px -3px 93px 17px rgba(33,32,32,1);
+	}
+
 #FilterContainor, #SortContainor {
+		background-color:rgba(0, 0, 0, 0);
     width: 35%;
-    background: #496E7D;
-    border-radius: 25px;
     display: inline-block;
-    margin: 5% 6%;
+    margin: 5% 5%;
 		padding: 1%;
 }
 
-#FilterContainor *, #SortContainor * {
-    margin: 2% 30%;
+#FilterContainor input {
     background: #E9EEF2;
+		width:30%;
+    margin: 2% 34%;
     border:none;
+		padding:2%;
 }
 
 #FilterContainor select {
-    margin-left: 32%;
+    background: #E9EEF2;
+		width: 30%;
+    margin:2% 35%;
+    border:none;
+		-webkit-appearance: menulist-button;
+   	height: 50px;
 }
 
 #SortContainor select:first-child {
-    margin-left: 34%;
+    background: #E9EEF2;
+		width: 30%;
+    margin-left: 35%;
+    border:none;
+		-webkit-appearance: menulist-button;
+   	height: 50px;
+}
+
+#SortContainor select:nth-child(2) {
+    background: #E9EEF2;
+		width:30%;
+    margin: 10% 35%;
+    border:none;
+		-webkit-appearance: menulist-button;
+   	height: 50px;
 }
 
 input[type=submit] {
@@ -54,24 +84,33 @@ input[type=submit]:focus {
 
 #EnergyReadings p{
     font-size: 18px;
+		background-color:rgba(0, 0, 0, 0);
 }
 #EnergyReadings div {
     display: inline-block;
     width: 46%;
     margin-left: 3%;
+		background-color:rgba(0, 0, 0, 0);
 }
 #EnergyReadings li {
     width: 95%;
     border-radius: 10px;
     border:solid 1.5px #496E7D;
     margin-bottom: 2%;
+		-webkit-box-shadow: inset 1px -3px 93px 17px rgba(33,32,32,1);
+		-moz-box-shadow: inset 1px -3px 93px 17px rgba(33,32,32,1);
+		box-shadow: inset 1px -3px 93px 17px rgba(33,32,32,1);
 }
 
+#BasicInfo {
+		background-color:rgba(0, 0, 0, 0);
+}
 
 #BasicInfo #row1, #BasicInfo #row2, #NumericalInfo #row1, #NumericalInfo #row2 {
     width: 42%;
     display: inline-block;
     margin-left: 5%;
+		background-color:rgba(0, 0, 0, 0);
 }
 
 
@@ -89,8 +128,9 @@ input[type=submit]:focus {
 }
 
 .ErrorMsg {
-	width: 50%;
-	background: #496E7D !important;
+	width: 35%;
+	background-color:rgba(0, 0, 0, 0);
+	text-align: center;
 	color: red;
   font-size: 18px;
 	letter-spacing: 2px;
@@ -98,18 +138,21 @@ input[type=submit]:focus {
 }
 
 #FilterError {
-	margin: 3% 32% !important;
+	margin: 3% 32.5%;
 }
 #DifferenceError {
-	margin: 3% 28% !important;
+	margin: 3% 32.5%;
 }
 #SortError {
-	margin: 3% 33% !important;
+	margin: 3% 32.5%;
 }
 #NoDataError {
-	margin: 3% 40% !important;
-	font-size: 30px !important;
-	background: #212020 !important;
+	margin: 3% 32.5%;
+	font-size: 30px;
+	background-color:rgba(0, 0, 0, 0);
+}
+
+@media screen and (min-width: 1700px) {
 
 }
 
