--- a/energyDataApp/wwwroot/css/site.css
+++ b/energyDataApp/wwwroot/css/site.css
@@ -22,7 +22,16 @@ for details on configuring this project to bundle and minify static web assets. 
 	-webkit-box-shadow: inset 1px -3px 93px 17px rgba(33,32,32,1);
 	-moz-box-shadow: inset 1px -3px 93px 17px rgba(33,32,32,1);
 	box-shadow: inset 1px -3px 93px 17px rgba(33,32,32,1);
-	}
+}
+
+#FilterContainor p:first-child, #SortContainor p:first-child {
+		background-color:rgba(0, 0, 0, 0);
+    width: 55%;
+		text-align: center;
+		margin: 3% 22.5%;
+		color: #E9EEF2;
+		font-size: 50px;
+}
 
 #FilterContainor, #SortContainor {
 		background-color:rgba(0, 0, 0, 0);
@@ -34,25 +43,16 @@ for details on configuring this project to bundle and minify static web assets. 
 
 #FilterContainor input {
     background: #E9EEF2;
-		width:30%;
-    margin: 2% 34%;
+		width:40%;
+    margin: 2% 28.5%;
     border:none;
 		padding:2%;
 }
 
 #FilterContainor select {
     background: #E9EEF2;
-		width: 30%;
-    margin:2% 35%;
-    border:none;
-		-webkit-appearance: menulist-button;
-   	height: 50px;
-}
-
-#SortContainor select:first-child {
-    background: #E9EEF2;
-		width: 30%;
-    margin-left: 35%;
+		width: 40%;
+    margin:2% 30%;
     border:none;
 		-webkit-appearance: menulist-button;
    	height: 50px;
@@ -60,8 +60,17 @@ for details on configuring this project to bundle and minify static web assets. 
 
 #SortContainor select:nth-child(2) {
     background: #E9EEF2;
-		width:30%;
-    margin: 10% 35%;
+		width: 40%;
+    margin: 2.5% 30%;
+    border:none;
+		-webkit-appearance: menulist-button;
+   	height: 50px;
+}
+
+#SortContainor select:nth-child(3) {
+    background: #E9EEF2;
+		width:50%;
+    margin: 2.5% 25%;
     border:none;
 		-webkit-appearance: menulist-button;
    	height: 50px;
@@ -75,7 +84,7 @@ input[type=submit] {
 		border: none;
     border-radius: 25px;
     margin-left: 42.5%;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
 }
 
 input[type=submit]:focus {
@@ -147,13 +156,72 @@ input[type=submit]:focus {
 	margin: 3% 32.5%;
 }
 #NoDataError {
-	margin: 3% 32.5%;
+	margin: 0% 32.5%;
+	padding-bottom: 10%;
 	font-size: 30px;
 	background-color:rgba(0, 0, 0, 0);
 }
 
 @media screen and (min-width: 1700px) {
 
+	#FilterContainor p:first-child, #SortContainor p:first-child {
+			background-color:rgba(0, 0, 0, 0);
+	    width: 35%;
+			text-align: center;
+			margin: 3% 32.5%;
+			color: #E9EEF2;
+			font-size: 50px;
+	}
+
+	#FilterContainor, #SortContainor {
+			background-color:rgba(0, 0, 0, 0);
+	    width: 35%;
+	    display: inline-block;
+	    margin: 5% 5%;
+			padding: 1%;
+	}
+
+	#FilterContainor input {
+	    background: #E9EEF2;
+			width:30%;
+	    margin: 2% 34%;
+	    border:none;
+			padding:2%;
+	}
+
+	#FilterContainor select {
+	    background: #E9EEF2;
+			width: 30%;
+	    margin:2% 35%;
+	    border:none;
+			-webkit-appearance: menulist-button;
+	   	height: 50px;
+	}
+
+	#SortContainor select:nth-child(2) {
+	    background: #E9EEF2;
+			width: 30%;
+	    margin: 2.5% 35%;
+	    border:none;
+			-webkit-appearance: menulist-button;
+	   	height: 50px;
+	}
+
+	#SortContainor select:nth-child(3) {
+	    background: #E9EEF2;
+			width:40%;
+	    margin: 2.5% 30%;
+	    border:none;
+			-webkit-appearance: menulist-button;
+	   	height: 50px;
+	}
+
+
+	#NoDataError {
+		margin: 2% 32.5%;
+		font-size: 50px !important;
+		background-color:rgba(0, 0, 0, 0);
+	}
 }
 
 
